--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.36.10",
+    "@slidev/cli": "0.42.4",
+    "@slidev/theme-bricks": "^0.0.2",
     "@slidev/theme-default": "0.21.2",
     "@slidev/theme-seriph": "0.21.3"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.1.34"
+    "@iconify-json/mdi": "1.1.34"
   }
 }
